--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>LOCAL Site</title>
+<title>Ashish Sharma Portfolio</title>
 <link rel="stylesheet" href="style.css">
 </head>
 
