--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="card-text">
           <a href="case-study-01.html"><h2>Case study title long long name long long name</h2></a>
           <p class="duration">company duration</p>
-          <p>  eli consectetur consectetur adipiscing eli consectetur adipiscing eli</p>
+          <p>eli consectetur consectetur adipiscing eli consectetur adipiscing eli eli consectetur consectetur adipiscing eli consectetur adipiscing eli  eli consectetur consectetur adipiscing eli consectetur adipiscing eli</p>
           <a href="case-study-01.html" class="button">Read more</a> 
         </div>
          <a class="card-image" href="case-study-01.html"><img  src="images/Study-01.png" width="100%"></a>
@@ -40,7 +40,7 @@
         <div class="card-text">
           <a href="case-study-02.html"><h2>Case study title long long name long long name</h2></a>
           <p class="duration">company duration</p>
-          <p>  eli consectetur consectetur adipiscing eli consectetur adipiscing eli</p>
+          <p>eli consectetur consectetur adipiscing eli consectetur adipiscing eli eli consectetur consectetur adipiscing eli consectetur adipiscing eli  eli consectetur consectetur adipiscing eli consectetur adipiscing eli</p>
           <a href="case-study-02.html" class="button">Read more</a> 
         </div>
          <a class="card-image" href="case-study-02.html"><img  src="images/Study-01.png" width="100%"></a>
@@ -50,13 +50,16 @@
         <div class="card-text">
           <a href="case-study-03.html"><h2>Case study title long long name long long name</h2></a>
           <p class="duration">company duration</p>
-          <p>  eli consectetur consectetur adipiscing eli consectetur adipiscing eli</p>
+          <p>eli consectetur consectetur adipiscing eli consectetur adipiscing eli eli consectetur consectetur adipiscing eli consectetur adipiscing eli  eli consectetur consectetur adipiscing eli consectetur adipiscing eli</p>
           <a href="case-study-03.html" class="button">Read more</a> 
         </div>
          <a class="card-image" href="case-study-03.html"><img  src="images/Study-01.png" width="100%"></a>
       </article>
       
     </div>
+
+    <p class="space"></p>
+    <p class="space"></p>
 </main>
 
 
