--- a/case-study-01.html
+++ b/case-study-01.html
@@ -30,7 +30,7 @@
          <h1>Finding nearby activities for in-trip travelers</h1>
          <p>Expedia, Local Experts, 2019-2020</p>
         </div>
-         <div><img width="80%" src="images/00-Hero.png"></div>
+    <div><img  src="images/00-Hero.png"></div>
         <p class="space"></p>
      
 
