Font weights, Show-Distance-Image

--- a/case-study-01.html
+++ b/case-study-01.html
@@ -4,8 +4,9 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ashish Sharma</title>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins|Poppins:400,500,600">
 <link rel="stylesheet" href="style.css">
+<title>Ashish Sharma Portfolio</title>
 </head>
 
 <body>
@@ -76,11 +77,11 @@
           <article class="section-center"> 
             <p>Analytics had shown that in-trip users had nearly 80% of searches and 50% of bookings on the app.
             </p>
-            <p>UX Research also did a competitive study, and we found that all competitors offered a map view to show the activities.
+            <p>UX Research team did a competitive study, and found that all competitors offered a map view to show the activities.
             <p>
               Within Expedia, the Hotels team had also used a map view to boost their sales. 
             </p>
-            <p>So our team was confident in the value of this user need, leading to the hypothesis.</p>
+            <p>So our team was confident in the value of this user need.</p>
           </article>
 
           <div class="section-left">
@@ -108,7 +109,7 @@
           </article>
 
           <article class="section-center"> 
-            <p>I was part of a squad team, spread across in Australia, India, and USA, comprising a Product Manager, a TPM, and Software Developers, and me as a UX Designer.
+            <p>I was part of a squad team, spread across in Australia, India, and USA, comprising a Product Manager, a TPM, and Software Developers, and myself as a UX Designer.
             </p> 
 
             <p>Outside of the squad, we had the advantage of seeking help from a User Researcher, a Content Strategist, and a Data Scientist.
@@ -117,7 +118,7 @@
 
           <div class="section-left">
             <img  src="images/Finding-Nearby-Activities/03-1-Stakeholders.png">
-            <p class="small">Remote teams.</p>
+            <p class="small">Remote teams across skills.</p>
           </div>
 
          <!--  <div class="section-right">
@@ -181,11 +182,11 @@
         <div class="section-grid"> 
           <article class="section-center">
             <h4>Competitive Analysis</h4>
-            <h2>A study was done by UX Research team</h2>
+            <h2>A study was done by UX Research team.</h2>
           </article>
 
           <div class="section-center">
-            <p>The study was done to learn how the competitors had solved this user need.</p>
+            <p>A study was done by UX Research team to learn how the competitors had solved this user need.</p>
             <img src="images/Finding-Nearby-Activities/05-1-Competitor-Screens.png">
             <p class="space"></p>
           </div>
@@ -285,27 +286,27 @@
           </article>
 
           <article class="section-center"> 
-            <p>I took over the designs made by the previous designer on the team. These were similar to the designs done by the Hotels team and used a cluster pin behavior. When a user would tap on a cluster pin, it would break down to multiple pins at a zoomed-in level. 
+            <p>I took over the designs made by the previous designer on the team. These were similar to the designs done by the Hotels team and used a cluster pin behavior. When a user would tap on a cluster pin, it would break down into multiple pins at a zoomed-in level. 
             </p>
-            <p>The cluster pin was a UI component within the company-wide design system, Universal Design System (UDS).
+            <p>The cluster pin was a component within the company-wide design system, Universal Design System (UDS).
             </p>
           </article>
 
           <div class="section-left">
             <img src="images/Finding-Nearby-Activities/07-1-Pin-behaviour.png">
-            <p class="small">Cluster pin in design system breaks down to multiple pins at a zoomed-in level.</p>
+            <p class="small">Cluster pin broke down to multiple pins at a zoomed-in level.</p>
           </div>
 
           <div class="section-right">
             <img src="images/Finding-Nearby-Activities/07-2-Unbreakable-Pin.png">
-            <p class="small">Some pins did not break further.</p>
+            <p class="small">When real data was used, some pins did not break further.</p>
           </div>
 
           
           <article class="section-center">
             <p class="space"></p>
             <div class="highlight highlight-first">
-              <p>Use of actual data to populate the map pins resulted in two problems:
+              <p>Use of real data to populate the map pins resulted in two problems:
               </p>
               <ol class="number-items">
                 <li>There were a lot of zoom issues.</li>
@@ -434,7 +435,7 @@
           <article class="section-center"> 
             <p>To increase prominence of Map on Search Results page, we added a mini-map above the search listings.
             </p>
-            <p>In case users would not tap on Map, and would scroll down, we thought of a slim card which would appear when a user scrolls down. Here we wanted to show the benefits of using a map view.
+            <p>In case users would not tap on Map and would scroll down, I proposed using a slim card which would appear when a user scrolls down. Here we wanted to show the benefits of using a map view.
             </p>
             <p class="space"></p>
           </article>
@@ -507,7 +508,7 @@
 
           <article class="section-center">
             <p class="space"></p> 
-            <p>Second, used quick filters to bring up the filters requested by travelers in the user study: price, proximity, and popularity.
+            <p>Second, used quick filters to bring up the filters requested by travelers in the user study: popularity, proximity, and price.
             </p><p class="space"></p>
           </article>
 
