--- a/case-study-02.html
+++ b/case-study-02.html
@@ -4,7 +4,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+<!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins"> -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins|Poppins:400,500,600">
 <link rel="stylesheet" href="style.css">
 <title>Ashish Sharma Portfolio</title>
 </head>
@@ -373,7 +374,7 @@
           </div>
           <div class="section-right">
             <img src="images/Automating-Invoicing/10-2-Test-Files.png">
-            <p class="small">Users could see test new files, and view status of previous tests.</p>
+            <p class="small">Users could test new files, and view status of previous tests.</p>
           </div>
           
           <article class="section-center">
