--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ashish Sharma Portfolio</title>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins|Poppins:400,500,600">
 <link rel="stylesheet" href="style.css">
+<title>Ashish Sharma Portfolio</title>
 </head>
 
 <body>
