text size update

--- a/case-study-01.html
+++ b/case-study-01.html
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins|Poppins:400,500,600">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins|Poppins:200, 300, 400,500,600">
 <link rel="stylesheet" href="style.css">
 <title>Ashish Sharma Portfolio</title>
 </head>
@@ -536,12 +536,11 @@
         <div class="section-grid"> 
           <article class="section-center">
             <h4>Enhancement #4</h4>
-            <h2>Showing distance on map card</h2>
+            <h2>Show distance on map card</h2>
           </article>
 
           <article class="section-center"> 
-            <p>Travelers wanted to know how far they need to travel for an activity. 
-              The task was to show the distance from their current location or booked hotel.          
+            <p>Travelers wanted to know how far they need to travel for an activity. The task was to show the distance from their current location or booked hotel.          
             </p> 
           </article>
 
