Updated font sizes & padding.

--- a/case-study-01.html
+++ b/case-study-01.html
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins|Poppins:200, 300, 400,500,600">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins|Poppins:200,300,400,500,600">
 <link rel="stylesheet" href="style.css">
 <title>Ashish Sharma Portfolio</title>
 </head>
@@ -31,6 +31,7 @@
     <!-- Grid Starts -->
       <div class="section-grid"> 
         <article class="section-wide">
+          <p class="caption thick">Case Study 01</p>
           <h1>Finding nearby activities for in-trip travelers</h1>
           <p class="duration">Expedia, Local Experts, 2019-2020</p>
           <p>A map view for travelers to help them orient themselves in a new city, and discover activities near them.</p>
