--- a/case-study-02.html
+++ b/case-study-02.html
@@ -31,6 +31,7 @@
       <!-- Grid Starts -->
         <div class="section-grid"> 
           <article class="section-wide">
+            <p class="caption thick">Case Study 02</p>
             <h1>Automated invoicing for high volume payees</h1>
             <p class="duration">Amazon, Payee Central, 2017-2018</p>
             <p>A self-service interface for high volume payees so that they can save time, effort and cost to receive payments.</p>
