--- a/case-study-03.html
+++ b/case-study-03.html
@@ -29,6 +29,7 @@
       <!-- Grid Starts -->
         <div class="section-grid"> 
           <article class="section-wide">
+            <p class="medium thick">Case Study 03</p>
             <h1>Aligning Help page with real user needs</h1>
             <p class="duration">Amazon, Payee Central, 2018</p>
             <p>Redesign of Help page so that payees can find answers to their questions quickly and with less assistance.</p>
