--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins|Poppins:400,500,600">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather|Merriweather:400,500,600">
 <link rel="stylesheet" href="style.css">
 <title>Ashish Sharma Portfolio</title>
 </head>
@@ -55,9 +56,10 @@
       <!-- Grid Starts -->
       <div class="section-grid"> 
         <article class="section-left">
+          <p class="caption thick">Case Study 01</p>
           <a href="case-study-01.html"><h2>Finding nearby activities for in-trip travelers</h2></a>
           <p class="duration">Expedia, Local Experts, 2019-2020</p>
-          <p class="description">A map view for travelers to help them orient themselves in a new city, and discover activities near them.</p>
+          <p class="description">A map view to help travelers orient themselves in a new city, and discover activities near them.</p>
           <a href="case-study-01.html" class="button">Read more</a> 
         </article>
 
@@ -72,6 +74,7 @@
         <!-- Grid Starts -->
       <div class="section-grid"> 
         <article class="section-left">
+          <p class="caption thick">Case Study 02</p>
           <a href="case-study-02.html"><h2>Automating invoice processing for high volume payees</h2></a>
           <p class="duration">Amazon, Payee Central, 2017-2018</p>
           <p class="description">A self-service interface for high volume payees so that they can save time, effort and cost to receive payments.</p>
@@ -89,6 +92,7 @@
          <!-- Grid Starts -->
       <div class="section-grid"> 
         <article class="section-left">
+          <p class="caption thick">Case Study 03</p>
           <a href="case-study-03.html"><h2>Aligning Help page with real user needs</h2></a>
           <p class="duration">Amazon, Payee Central, 2018</p>
           <p class="description">Redesign of Help page so that payees can find answers to their questions quickly and with less assistance.</p>
