--- a/case-study-01.html
+++ b/case-study-01.html
@@ -34,7 +34,7 @@
           <p class="caption thick">Case Study 01</p>
           <h1>Finding nearby activities for in-trip travelers</h1>
           <p class="duration">Expedia, Local Experts, 2019-2020</p>
-          <p>A map view for travelers to help them orient themselves in a new city, and discover activities near them.</p>
+          <p>A map view to help travelers orient themselves in a new city, and discover activities near them.</p>
           <p class="space"></p>
           <img src="images/Finding-Nearby-Activities/00-Hero.png" width="100%">
         </article>
