top-heading update

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <p class="caption thick">Case Study 02</p>
           <a href="case-study-02.html"><h2>Automating invoice processing for high volume payees</h2></a>
           <p class="duration">Amazon, Payee Central, 2017-2018</p>
-          <p class="description">A self-service interface for high volume payees so that they can save time, effort and cost to receive payments.</p>
+          <p class="description">A self-service interface for high volume payees so that they can receive their payments faster, at less cost and effort.</p>
           <a href="case-study-02.html" class="button">Read more</a> 
         </article>
 
