--- a/case-studies.html
+++ b/case-studies.html
@@ -5,6 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins|Poppins:400,500,600">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather|Merriweather:400,500,600">
 <link rel="stylesheet" href="style.css">
 <title>Ashish Sharma Portfolio</title>
 </head>
@@ -56,7 +57,7 @@
           <p class="caption thick">Case Study 02</p>
           <a href="case-study-02.html"><h2>Automating invoice processing for high volume payees</h2></a>
           <p class="duration">Amazon, Payee Central, 2017-2018</p>
-          <p class="description">A self-service interface for high volume payees so that they can save time, effort and cost to receive payments.</p>
+          <p class="description">A self-service interface for high volume payees so that they can receive their payments faster, at less cost and effort.</p>
           <a href="case-study-02.html" class="button">Read more</a> 
         </article>
 
@@ -86,6 +87,7 @@
       </div><!-- Grid Ends -->
 
       </div>
+
     </div>
 </main>
 
