tablet grid size update

--- a/case-study-01.html
+++ b/case-study-01.html
@@ -189,17 +189,19 @@
 
           <div class="section-center">
             <p>A study was done by UX Research team to learn how the competitors had solved this user need.</p>
+          </div>
+
+          <div class="section-left">
             <img src="images/Finding-Nearby-Activities/05-1-Competitor-Screens.png">
             <p class="space"></p>
           </div>
 
-
-          <div class="section-left">
+          <div class="section-right">
             <img  src="images/Finding-Nearby-Activities/05-2-Competitor-Study.png">
             <p class="small">Illustration for Competitive Study</p>
           </div>
 
-          <article class="section-right"> 
+          <article class="section-center"> 
             <div class="highlight highlight-first">
               <p class="thick">Studied the findings to learn how this problem was solved in the industry -</p>
             <ol class="number-items">
